--- a/index.html
+++ b/index.html
@@ -5,17 +5,15 @@
         <title>Barbearia Corte Suave</title>
         <link rel="stylesheet" href="style.css">
 
-        <style>
-
-        </style>
     </head>
     <body>
-        <h1 style="text-align: center;">Sobre a Barbearia Corte Suave</h1>
+        <img id="banner" src="banner.jpg">
+        <h1>Sobre a Barbearia Corte Suave</h1>
 
         <p>Localizada no coração da cidade a <strong>Barbearia Corte Suave</strong> para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2021, a Barbearia Corte Suave 
         já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
-        <p style="font-size: 20px;"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+        <p id= "missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
 
         <p> Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e 
         satisfação dos nossos clientes.</p>
