--- a/index.html
+++ b/index.html
@@ -8,14 +8,27 @@
     </head>
     <body>
         <img id="banner" src="banner.jpg">
-        <h1>Sobre a Barbearia Corte Suave</h1>
+        <div class="principal">
+            <h1>Sobre a Barbearia Corte Suave</h1>
 
-        <p>Localizada no coração da cidade a <strong>Barbearia Corte Suave</strong> para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2021, a Barbearia Corte Suave 
-        já é destaque na cidade e conquista novos clientes a cada dia.</p>
+            <p>Localizada no coração da cidade a <strong>Barbearia Corte Suave</strong> para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2021, a Barbearia Corte Suave 
+            já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
-        <p id= "missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+            <p id= "missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
 
-        <p> Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e 
-        satisfação dos nossos clientes.</p>
+            <p> Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e 
+            satisfação dos nossos clientes.</p>
+        </div>
+
+        <div class="beneficios">
+            <h2>Benefícios</h2>
+            <ul>
+                <li class="itens">Atendimento aos clientes</li>
+                <li class="itens">Espaço diferenciado</li>
+                <li class="itens">Localização</li>
+                <li class="itens">Profissionais qualificados</li>
+            </ul>
+            <img src="beneficios.jpg" class="imagembeneficios">
+    </div>
     </body>
 </html>
