--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
         <link rel="stylesheet" href="style.css">
 
     </head>
+    
     <body>
+        <header>
+            <h1 class="titulo-principal">Barbearia Corte Suave</h1>
+        </header>
+
         <img id="banner" src="banner.jpg">
         <div class="principal">
-            <h1>Sobre a Barbearia Corte Suave</h1>
+            <h2 class="titulo-centralizado">Sobre a Barbearia Corte Suave</h2>
 
             <p>Localizada no coração da cidade a <strong>Barbearia Corte Suave</strong> para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2021, a Barbearia Corte Suave 
             já é destaque na cidade e conquista novos clientes a cada dia.</p>
@@ -21,7 +26,7 @@
         </div>
 
         <div class="beneficios">
-            <h2>Benefícios</h2>
+            <h3 class="titulo-centralizado">Benefícios</h3>
             <ul>
                 <li class="itens">Atendimento aos clientes</li>
                 <li class="itens">Espaço diferenciado</li>
