--- a/inicial/index.html
+++ b/inicial/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Barbearia Corte Suave</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
 
     </head>
     
@@ -12,7 +12,7 @@
             <h1 class="titulo-principal">Barbearia Corte Suave</h1>
         </header>
 
-        <img id="banner" src="banner.jpg">
+        <img id="banner" src="image/banner.jpg">
         <div class="principal">
             <h2 class="titulo-centralizado">Sobre a Barbearia Corte Suave</h2>
 
@@ -33,7 +33,7 @@
                 <li class="itens">Localização</li>
                 <li class="itens">Profissionais qualificados</li>
             </ul>
-            <img src="beneficios.jpg" class="imagembeneficios">
+            <img src="image/beneficios.jpg" class="imagembeneficios">
     </div>
     </body>
 </html>
