--- a/initial/index.html
+++ b/initial/index.html
@@ -2,19 +2,19 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
-        <title>Barbearia Corte Suave</title>
+        <title>Barbearia Alura</title>
         <link rel="stylesheet" href="css/style.css">
 
     </head>
     
     <body>
         <header>
-            <h1 class="titulo-principal">Barbearia Corte Suave</h1>
+            <h1 class="titulo-principal">Barbearia Alura</h1>
         </header>
 
         <img id="banner" src="image/banner.jpg">
         <div class="principal">
-            <h2 class="titulo-centralizado">Sobre a Barbearia Corte Suave</h2>
+            <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
 
             <p>Localizada no coração da cidade a <strong>Barbearia Corte Suave</strong> para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2021, a Barbearia Corte Suave 
             já é destaque na cidade e conquista novos clientes a cada dia.</p>
