Adicionar os serviços ao projeto

--- a/products/produtos.html
+++ b/products/produtos.html
@@ -2,26 +2,46 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title> Produtos - Barbearia Alura</title>
+        <title> Serviços - Barbearia Alura</title>
 
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/produtos.css">
     </head>
-
     <body>
-        
         <header>
             <div class="caixa">
                 <h1><img src="images/logo.png"></h1>
                 <nav>
                     <ul>
                         <li><a href="../initial/index.html">Home</a></li>
-                        <li><a href="produtos.html">Produtos</a></li>
+                        <li><a href="produtos.html">Serviços</a></li>
                         <li><a href="contatos.html">Contato</a></li>
                     </ul>
                 </nav>
         </div>
         </header>
 
+        <main>
+            <ul class="servicos">
+                <li>
+                    <h2>Cabelo</h2>
+                    <img src="images/cabelo.jpg">
+                    <p class="servico-descricao">Na tesoura ou máquina, como o cliente preferir</p>
+                    <p class="servico-preco">R$ 50,00</p>
+                </li>
+                <li>
+                    <h2>Barba</h2>
+                    <img src="images/barba.jpg">
+                    <p class="servico-descricao">Corte e desenho profissional de barba</p>
+                    <p class="servico-preco">R$ 30,00</p>
+                </li>
+                <li>
+                    <h2>Cabelo + Barba</h2>
+                    <img src="images/cabelo+barba.jpg">
+                    <p class="servico-descricao">Pacote Completo: Cabelo e Barba</p>
+                    <p class="servico-preco">R$ 75,00</p>
+                </li>
+            </ul>
+        </main>
     </body>
 </html>
