--- a/initial/index.html
+++ b/initial/index.html
@@ -16,7 +16,7 @@
         <div class="principal">
             <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
 
-            <p>Localizada no coração da cidade a <strong>Barbearia Corte Suave</strong> para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2021, a Barbearia Corte Suave 
+            <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura 
             já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
             <p id= "missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
