--- a/products/produtos.html
+++ b/products/produtos.html
@@ -43,5 +43,10 @@
                 </li>
             </ul>
         </main>
+
+        <footer>
+            <img src="images/logo-branco.png">
+            <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+        </footer>
     </body>
 </html>
