Adicionar css da pagina inicial

--- a/initial/index.html
+++ b/initial/index.html
@@ -3,13 +3,23 @@
     <head>
         <meta charset="UTF-8">
         <title>Barbearia Alura</title>
-        <link rel="stylesheet" href="css/style.css">
 
+        <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     
     <body>
         <header>
-            <h1 class="titulo-principal">Barbearia Alura</h1>
+            <div class="titulo-principal">
+            <h1><img src="../products/images/logo.png"></h1>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="../products/produtos.html">Serviços</a></li>
+                    <li><a href="../units/unidade.html">Unidades</a></li>
+                </ul>
+            </nav>
         </header>
 
         <img id="banner" src="image/banner.jpg">
