Criar uma pagina de formulario

--- a/initial/index.html
+++ b/initial/index.html
@@ -5,7 +5,7 @@
         <title>Barbearia Alura</title>
 
         <link rel="stylesheet" href="css/reset.css">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style-home.css">
     </head>
     
     <body>
@@ -17,7 +17,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="../products/produtos.html">Serviços</a></li>
-                    <li><a href="../units/unidade.html">Unidades</a></li>
+                    <li><a href="../contact/contato.html">CONTATO</a></li>
                 </ul>
             </nav>
         </header>
