--- a/products/produtos.html
+++ b/products/produtos.html
@@ -5,7 +5,7 @@
         <title> Serviços - Barbearia Alura</title>
 
         <link rel="stylesheet" href="css/reset.css">
-        <link rel="stylesheet" href="css/produtos.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <header>
@@ -15,7 +15,7 @@
                     <ul>
                         <li><a href="../initial/index.html">Home</a></li>
                         <li><a href="produtos.html">Serviços</a></li>
-                        <li><a href="contatos.html">Contato</a></li>
+                        <li><a href="../contact/contato.html">Contato</a></li>
                     </ul>
                 </nav>
         </div>
