--- a/pages/index.html
+++ b/pages/index.html
@@ -4,25 +4,25 @@
         <meta charset="UTF-8">
         <title>Barbearia Alura</title>
 
-        <link rel="stylesheet" href="css/reset.css">
-        <link rel="stylesheet" href="css/style-home.css">
+        <link rel="stylesheet" type="text/css" href="../css/reset.css">
+        <link rel="stylesheet" type="text/css" href="../css/style-home.css">
     </head>
     
     <body>
         <header>
             <div class="titulo-principal">
-            <h1><img src="../products/images/logo.png"></h1>
+            <h1><img src="../images/logo.png" alt="Logo alura"></h1>
             </div>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="../products/produtos.html">Serviços</a></li>
-                    <li><a href="../contact/contato.html">CONTATO</a></li>
+                    <li><a href="../pages/produtos.html">Serviços</a></li>
+                    <li><a href="../pages/contato.html">CONTATO</a></li>
                 </ul>
             </nav>
         </header>
 
-        <img id="banner" src="image/banner.jpg">
+        <img id="banner" src="../images/banner.jpg" alt="Imagem do interior da Barbearia Alura">
         <div class="principal">
             <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
 
@@ -43,7 +43,7 @@
                 <li class="itens">Localização</li>
                 <li class="itens">Profissionais qualificados</li>
             </ul>
-            <img src="image/beneficios.jpg" class="imagembeneficios">
+            <img src="../images/beneficios.jpg" class="imagembeneficios" alt="Fazendo um corte do cliente">
     </div>
     </body>
 </html>
