--- a/pages/produtos.html
+++ b/pages/produtos.html
@@ -4,18 +4,18 @@
         <meta charset="UTF-8">
         <title> Serviços - Barbearia Alura</title>
 
-        <link rel="stylesheet" href="css/reset.css">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="../css/reset.css">
+        <link rel="stylesheet" type="text/css" href="../css/style.css">
     </head>
     <body>
         <header>
             <div class="caixa">
-                <h1><img src="images/logo.png"></h1>
+                <h1><img src="../images/logo.png" alt="Logo Barbearia Alura"></h1>
                 <nav>
                     <ul>
-                        <li><a href="../initial/index.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="produtos.html">Serviços</a></li>
-                        <li><a href="../contact/contato.html">Contato</a></li>
+                        <li><a href="contato.html">Contato</a></li>
                     </ul>
                 </nav>
         </div>
@@ -25,19 +25,19 @@
             <ul class="servicos">
                 <li>
                     <h2>Cabelo</h2>
-                    <img src="images/cabelo.jpg">
+                    <img src="../images/cabelo.jpg" alt="Valor cabelo">
                     <p class="servico-descricao">Na tesoura ou máquina, como o cliente preferir</p>
                     <p class="servico-preco">R$ 50,00</p>
                 </li>
                 <li>
                     <h2>Barba</h2>
-                    <img src="images/barba.jpg">
+                    <img src="../images/barba.jpg" alt="Valor barba">
                     <p class="servico-descricao">Corte e desenho profissional de barba</p>
                     <p class="servico-preco">R$ 30,00</p>
                 </li>
                 <li>
                     <h2>Cabelo + Barba</h2>
-                    <img src="images/cabelo+barba.jpg">
+                    <img src="../images/cabelo+barba.jpg" alt="Valor corte + barba">
                     <p class="servico-descricao">Pacote Completo: Cabelo e Barba</p>
                     <p class="servico-preco">R$ 75,00</p>
                 </li>
@@ -45,7 +45,7 @@
         </main>
 
         <footer>
-            <img src="images/logo-branco.png">
+            <img src="../images/logo-branco.png" alt="Logo Barbearia Alura">
             <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
         </footer>
     </body>
