--- a/pages/contato.html
+++ b/pages/contato.html
@@ -4,17 +4,17 @@
         <meta charset="UTF-8">
         <title> Contato - Barbearia Alura</title>
 
-        <link rel="stylesheet" href="../products/css/reset.css">
-        <link rel="stylesheet" href="../products/css/style.css">
+        <link rel="stylesheet" type="text/css" href="../css/reset.css">
+        <link rel="stylesheet" type="text/css" href="../css/style.css">
     </head>
     <body>
         <header>
             <div class="caixa">
-                <h1><img src="../products/images/logo.png" alt="Logo da Barbearia Alura"></h1>
+                <h1><img src="../images/logo.png" alt="Logo da Barbearia Alura"></h1>
                 <nav>
                     <ul>
-                        <li><a href="../initial/index.html">Home</a></li>
-                        <li><a href="../products/produtos.html">Serviços</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="produtos.html">Serviços</a></li>
                         <li><a href="contato.html">Contato</a></li>
                     </ul>
                 </nav>
@@ -82,7 +82,7 @@
             
         </main>
         <footer>
-            <img src="../products/images/logo-branco.png" alt="Logo da Barbearia Alura">
+            <img src="../images/logo-branco.png" alt="Logo da Barbearia Alura">
             <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
         </footer>
     </body>
