Finalizar pag inicial e tornar o site responsivo

--- a/pages/index.html
+++ b/pages/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width">
         <title>Barbearia Alura</title>
 
         <link rel="stylesheet" type="text/css" href="../css/reset.css">
@@ -43,27 +44,34 @@
             <section class="mapa">
                 <h3 class="titulo-principal">Nosso Estabelecimento</h3>
                 <p>Nosso estabelecimento está localizado no coração da cidade.</p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.2946147433613!2d-43.178330384487715!3d-22.902501743477224!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997f5f371c4e59%3A0x9938d55dca1fbf51!2sCaelum%20-%20Escola%20de%20Tecnologia!5e0!3m2!1spt-BR!2sbr!4v1631649521744!5m2!1spt-BR!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                
+                <div class="mapa-conteudo">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.2946147433613!2d-43.178330384487715!3d-22.902501743477224!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997f5f371c4e59%3A0x9938d55dca1fbf51!2sCaelum%20-%20Escola%20de%20Tecnologia!5e0!3m2!1spt-BR!2sbr!4v1631649521744!5m2!1spt-BR!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
             </section>
 
             <section class="beneficios">
                 <h3 class="titulo-principal">Benefícios</h3>
-                <ul>
-                    <li class="itens">Atendimento aos clientes</li>
-                    <li class="itens">Espaço diferenciado</li>
-                    <li class="itens">Localização</li>
-                    <li class="itens">Profissionais qualificados</li>
-                </ul>
-                <img src="../images/beneficios.jpg" class="imagembeneficios" alt="Fazendo um corte do cliente">
+                <div class="conteudo-beneficios">
+                    <ul class="lista-beneficios">
+                        <li class="itens">Atendimento aos clientes</li>
+                        <li class="itens">Espaço diferenciado</li>
+                        <li class="itens">Localização</li>
+                        <li class="itens">Profissionais qualificados</li>
+                        <li class="itens">Pontualidade</li>
+                        <li class="itens">Limpeza</li>
+                    </ul><img src="../images/beneficios.jpg" class="imagem-beneficios" alt="Fazendo um corte do cliente">
+                </div>
+                
                 <div class="video">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </section>
         </main>
 
     <footer>
         <img src="../images/logo-branco.png" alt="Logo Barbearia Alura">
-        <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+        <p class="copyright">&copy; Copyright Barbearia Alura - 2021</p>
     </footer>
 
     </body>
